--- a/UI/ColorVision.UI/PropertyEditor/Editor/List/ListItemEditorWindow.xaml
+++ b/UI/ColorVision.UI/PropertyEditor/Editor/List/ListItemEditorWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="编辑项" Height="200" Width="500" 
+        Title="编辑项" Height="200" Width="600" 
         Background="{DynamicResource GlobalBackground}"
         WindowStartupLocation="CenterOwner">
     <Window.Resources>
@@ -21,8 +21,7 @@
         </Grid.RowDefinitions>
 
         <!-- Editor Content Container -->
-        <Border Grid.Row="0" BorderBrush="{DynamicResource BorderBrush}" 
-                BorderThickness="1" CornerRadius="5" Padding="10">
+        <Border Grid.Row="0" BorderBrush="{DynamicResource BorderBrush}"   Padding="10" BorderThickness="1" CornerRadius="5">
             <StackPanel x:Name="EditorPanel">
                 <!-- Editor controls will be added here dynamically -->
             </StackPanel>
