--- a/Engine/ColorVision.Engine/Services/Devices/Spectrum/Views/ViewSpectrum.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Spectrum/Views/ViewSpectrum.xaml
@@ -45,7 +45,7 @@
                         <ToggleButton x:Name="ToggleSpectrumType" Click="ToggleSpectrumType_Click" Margin="2,0,0,0" ToolTip="切换相对/绝对光谱">
                             <TextBlock Text="{x:Static properties:Resources.Relative}" x:Name="SpectrumTypeText"/>
                         </ToggleButton>
-                        <Button Content="{x:Static properties:Resources.Inquire}" Click="SearchAdvanced_Click" Margin="2,0,0,0"/>
+                        <Button Content="{x:Static properties:Resources.Inquire}" Click="Inquire_Click" Margin="2,0,0,0"/>
                         <Button x:Name="Search" Content="{x:Static properties:Resources.AdvanceSearch}" Click="SearchAdvanced_Click" Margin="2,0,0,0"/>
                         <Button  Content="{x:Static properties:Resources.Exchange}" Click="Exchange_Click" Margin="2,0,0,0"/>
                     </ToolBar>
@@ -124,6 +124,13 @@
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate  DataType="{x:Type local:ViewResultSpectrum}">
                                         <TextBlock Text="{Binding CreateTime}"/>
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
+                            <GridViewColumn  Header="IntTime">
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate  DataType="{x:Type local:ViewResultSpectrum}">
+                                        <TextBlock Text="{Binding IntTime}"/>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
