--- a/UI/ColorVision.ImageEditor/EditorTools/Algorithms/Calculate/SFR/SfrSimplePlotControl.xaml
+++ b/UI/ColorVision.ImageEditor/EditorTools/Algorithms/Calculate/SFR/SfrSimplePlotControl.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="ColorVision.ImageEditor.EditorTools.Algorithms.Calculate.SfrSimplePlotControl"
+<UserControl x:Class="ColorVision.ImageEditor.EditorTools.Algorithms.Calculate.SFR.SfrSimplePlotControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:ScottPlot="clr-namespace:ScottPlot.WPF;assembly=ScottPlot.WPF">
